--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+					<!-- <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a> -->
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -38,17 +38,17 @@
 						<ul class="nav navbar-nav menu_nav justify-content-end">
 							<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li> -->
 							<li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
 							
-							<li class="nav-item submenu dropdown">
+							<!-- <li class="nav-item submenu dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 								 aria-expanded="false">Blog</a>
 								<ul class="dropdown-menu">
 									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
 									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
 								</ul>
-							</li>
+							</li> -->
 							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -281,41 +281,45 @@
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
 						<h2>service offers </h2>
-						<p>
+						<!-- <p>
 							Is give may shall likeness made yielding spirit a itself togeth created 
 							after sea <br> is in beast beginning signs open god you're gathering ithe
-						</p>
+						</p> -->
 					</div>
 				</div>
 			</div>
 			<div class="row feature_inner">
 				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
+					<!-- <div class="feature_item">
 						<img src="img/services/s1.png" alt="">
 						<h4>Wp developing</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
-					</div>
+					</div> -->
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
-						<h4>UI/ux design</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<h4>Backend Development</h4>
+						<p>Creating a secure backend using Django and Django Rest Framework</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
 						<h4>Web design</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<p>HTML,CSS</p>
+						<p>Bootstrap5,Js</p>
+						<br>
+						<br>
+						
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="feature_item">
+					<!-- <div class="feature_item">
 						<img src="img/services/s4.png" alt="">
 						<h4>seo optimize</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -365,17 +369,17 @@
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p2.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/navana.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p2.jpg" class="img-gal">
+								<a href="img/portfolio/navana.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Paint wall</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="protfolio_details_2.html">Nevana Hospital</a></h4>
+								<p>Tech Stacks: Django(DRF), Bootstrap5, HTML , CSS</p>
 							</div>
 						</div>
 					</div>
@@ -425,7 +429,7 @@
                     <div class="footer_top flex-column">
                         <div class="footer_logo">
                             <a href="#">
-                                <img src="img/logo.png" alt="">
+                                <!-- <img src="img/logo.png" alt=""> -->
                             </a>
                             <h4>Follow Me</h4>
                         </div>
