--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
     <section class="contact_area section_gap">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <div class="contact_info">
                         <div class="info_item">
                             <i class="lnr lnr-home"></i>
@@ -88,16 +88,16 @@
                         <div class="info_item">
                             <i class="lnr lnr-phone-handset"></i>
                             <h6><a href="#">(+880) 1787929436</a></h6>
-                            <p>Mon to Fri 9am to 6 pm</p>
+                            <p></p>
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">shifat58201@gmail.com</a></h6>
+                            <h6><a href="#">mdshifat.official.05@gmail.com</a></h6>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-8">
                     <form class="row contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
                         <div class="col-md-6">
                             <div class="form-group">
