--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
@@ -502,12 +501,6 @@
 		</div>
 	</section>
 	<!--================End Portfolio Area =================-->
-
-	<!--================ Start Testimonial Area =================-->
-	
-	<!--================ End Testimonial Area =================-->
-
-
         
         <!--================Footer Area =================-->
 	<footer class="footer_area">
@@ -521,12 +514,12 @@
                             </a>
                             <h4>Follow Me</h4>
                         </div>
-                        <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
+						<div class="footer_social">
+							<a href="https://www.facebook.com/ak.shifat.902" target="_blank"><i class="fa-brands fa-facebook" style="color: #0473c8;"></i></i></a>
+							<a href="https://www.linkedin.com/in/md-mim-shifat/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #027fde;"></i></a>
+							<!-- <a href="#"><i class="fa-brands fa-discord"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-behance"></i></a> -->
+						</div>
                     </div>
                 </div>
             </div>
