--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
-	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 	<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
@@ -400,7 +399,7 @@
 	</section>
 	<!--================End Portfolio Area =================-->
 
-	<!--================ Start Newsletter Area =================-->
+	<!--================ Start Contact Area =================-->
 	<section class="contact_area section_gap">
 		<h1 class="text-center m-5">Contact Us</h1>
         <div class="container">
@@ -414,7 +413,7 @@
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-phone-handset"></i>
-                            <h6><a href="#">(+880) 1787929436</a></h6>
+                            <h6><a href="#">(+880) 1787929436 (Whatsapp)</a></h6>
                             <p></p>
                         </div>
                         <div class="info_item">
@@ -460,7 +459,7 @@
             </div>
         </div>
     </section>
-	<!--================ End Newsletter Area =================-->
+	<!--================ End Contact Area =================-->
 
 	<!--================Footer Area =================-->
 	<footer class="footer_area">
@@ -475,10 +474,10 @@
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer_social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.facebook.com/ak.shifat.902" target="_blank"><i class="fa-brands fa-facebook" style="color: #0473c8;"></i></i></a>
+							<a href="https://www.linkedin.com/in/md-mim-shifat/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #027fde;"></i></a>
+							<!-- <a href="#"><i class="fa-brands fa-discord"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-behance"></i></a> -->
 						</div>
 					</div>
 				</div>
