--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,10 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/magnific-popup.css">
 	<link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- main css -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -152,12 +152,12 @@
                             </a>
                             <h4>Follow Me</h4>
                         </div>
-                        <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </div>
+						<div class="footer_social">
+							<a href="https://www.facebook.com/ak.shifat.902" target="_blank"><i class="fa-brands fa-facebook" style="color: #0473c8;"></i></i></a>
+							<a href="https://www.linkedin.com/in/md-mim-shifat/" target="_blank"><i class="fa-brands fa-linkedin" style="color: #027fde;"></i></a>
+							<!-- <a href="#"><i class="fa-brands fa-discord"></i></a> -->
+							<!-- <a href="#"><i class="fa fa-behance"></i></a> -->
+						</div>
                     </div>
                 </div>
             </div>
