--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Pet Adoption Bd</a></h4>
+								<h4><a class="text-primary" href="portfolio-details.html">Pet Adoption Bd</a></h4>
 								<p>Tech Stacks: Django(MVT), Bootstrap5, HTML , CSS</p>
 								
 							</div>
@@ -127,7 +127,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="protfolio_details_2.html">Nevana Hospital</a></h4>
+								<h4><a class="text-primary" href="protfolio_details_2.html">Nevana Hospital</a></h4>
 								<p>Tech Stacks: Django(DRF), Bootstrap5, HTML , CSS</p>
 							</div>
 						</div>
