--- a/index.html
+++ b/index.html
@@ -357,6 +357,40 @@
 	
 			<div class="filters-content">
 				<div class="row portfolio-grid justify-content-center">
+					<div class="col-lg-4 col-md-6 all latest popular">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/Quiz.png" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/Quiz.png" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a class="text-primary hover-underline" href="portfolio-details_3.html">Quiz Application</a></h4>
+								<p>Django Rest Framwork(DRF), Tailwind, React, sqlite3</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all latest">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/sellstream.png" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/sellstream.png" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a class="text-primary hover-underline" href="portfolio-details-4.html">Sellstream</a></h4>
+								<p>Django Rest Framwork(DRF),React,Redux,Tailwind,PostgreSQL</p>
+							</div>
+						</div>
+					</div>
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
